[gd_scene load_steps=33 format=3 uid="uid://bk1kvsupe4ydw"]

[ext_resource type="Script" path="res://scenes/characters/MainPlayer.gd" id="1_sevst"]
[ext_resource type="Texture2D" uid="uid://vqttcd7hnsyo" path="res://textures/Knight_Idle_dir1.png" id="2_jn4wr"]
[ext_resource type="Texture2D" uid="uid://xef1jw2hej6o" path="res://textures/Knight_Idle_dir3.png" id="3_vqdjp"]
[ext_resource type="Texture2D" uid="uid://drvfxis5i1uen" path="res://textures/Knight_Idle_dir5.png" id="4_vg8b3"]
[ext_resource type="Texture2D" uid="uid://cfrf3d7kvet1w" path="res://textures/Knight_Idle_dir7.png" id="5_udc4h"]
[ext_resource type="Texture2D" uid="uid://btlsixd877c0y" path="res://textures/Knight_Attack_dir1.png" id="6_5wq8t"]
[ext_resource type="Texture2D" uid="uid://dgp15cnmdm6ii" path="res://textures/Knight_Attack_dir3.png" id="7_pnby8"]
[ext_resource type="Texture2D" uid="uid://d07rodj7if7j" path="res://textures/Knight_Attack_dir7.png" id="8_c0ump"]
[ext_resource type="Texture2D" uid="uid://br54gca32yo1w" path="res://textures/Knight_Attack_dir5.png" id="9_kojd4"]
[ext_resource type="Script" path="res://scenes/misc/Camera.gd" id="10_p5rqo"]
[ext_resource type="Texture2D" uid="uid://bwx6qjt1yvba1" path="res://textures/CircleSplosionV2_100x100px.png" id="11_xy2c1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qob34"]
size = Vector2(86, 84)

[sub_resource type="Animation" id="Animation_yy5nq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t0v8v"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_c0ump")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"goto_idle"
}]
}

[sub_resource type="Animation" id="Animation_pxk81"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_5wq8t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"goto_idle"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 14]
}

[sub_resource type="Animation" id="Animation_mwf1b"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_kojd4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"goto_idle"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 14]
}

[sub_resource type="Animation" id="Animation_7ff4s"]
length = 0.1
step = 0.0066
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_pnby8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"goto_idle"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 14]
}

[sub_resource type="Animation" id="Animation_0qliu"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_udc4h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_uyvk8"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jn4wr")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_368vw"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_vg8b3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_s5qyh"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_vqdjp")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhjpy"]
_data = {
"RESET": SubResource("Animation_yy5nq"),
"attack_down": SubResource("Animation_t0v8v"),
"attack_left": SubResource("Animation_pxk81"),
"attack_right": SubResource("Animation_mwf1b"),
"attack_up": SubResource("Animation_7ff4s"),
"idle_down": SubResource("Animation_0qliu"),
"idle_left": SubResource("Animation_uyvk8"),
"idle_right": SubResource("Animation_368vw"),
"idle_up": SubResource("Animation_s5qyh")
}

[sub_resource type="Animation" id="Animation_kmuc2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5awk1"]
resource_name = "explode"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [30, 88]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ya5vb"]
_data = {
"RESET": SubResource("Animation_kmuc2"),
"explode": SubResource("Animation_5awk1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqlir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvnxi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6x8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s6sv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pec1w"]
size = Vector2(9, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xuaf"]
size = Vector2(10, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w58p"]
size = Vector2(84, 7.5)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_sevst")

[node name="MainCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qob34")

[node name="Anims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nhjpy")
}

[node name="MainSprite" type="Sprite2D" parent="."]
texture = ExtResource("7_pnby8")
hframes = 4
vframes = 4

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("10_p5rqo")

[node name="AttackAreaUp" type="Area2D" parent="."]
z_index = 4096

[node name="ExplosionSprite" type="Sprite2D" parent="AttackAreaUp"]
position = Vector2(0, -150)
scale = Vector2(2, 2)
texture = ExtResource("11_xy2c1")
hframes = 10
vframes = 10

[node name="Anims" type="AnimationPlayer" parent="AttackAreaUp"]
libraries = {
"": SubResource("AnimationLibrary_ya5vb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaUp"]
position = Vector2(0, -110)
scale = Vector2(4.5, 7)
shape = SubResource("RectangleShape2D_xqlir")

[node name="AttackAreaLeft" type="Area2D" parent="."]

[node name="ExplosionSprite" type="Sprite2D" parent="AttackAreaLeft"]
position = Vector2(-120, -35)
scale = Vector2(2, 2)
texture = ExtResource("11_xy2c1")
hframes = 10
vframes = 10

[node name="Anims" type="AnimationPlayer" parent="AttackAreaLeft"]
libraries = {
"": SubResource("AnimationLibrary_ya5vb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaLeft"]
position = Vector2(-110, 0)
scale = Vector2(7, 4.5)
shape = SubResource("RectangleShape2D_mvnxi")

[node name="AttackAreaRight" type="Area2D" parent="."]

[node name="ExplosionSprite" type="Sprite2D" parent="AttackAreaRight"]
position = Vector2(120, -35)
scale = Vector2(2, 2)
texture = ExtResource("11_xy2c1")
hframes = 10
vframes = 10

[node name="Anims" type="AnimationPlayer" parent="AttackAreaRight"]
libraries = {
"": SubResource("AnimationLibrary_ya5vb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaRight"]
position = Vector2(110, 0)
scale = Vector2(7, 4.5)
shape = SubResource("RectangleShape2D_h6x8j")

[node name="AttackAreaDown" type="Area2D" parent="."]

[node name="ExplosionSprite" type="Sprite2D" parent="AttackAreaDown"]
position = Vector2(0, 60)
scale = Vector2(2, 2)
texture = ExtResource("11_xy2c1")
hframes = 10
vframes = 10

[node name="Anims" type="AnimationPlayer" parent="AttackAreaDown"]
libraries = {
"": SubResource("AnimationLibrary_ya5vb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaDown"]
position = Vector2(0, 110)
scale = Vector2(4.5, 7)
shape = SubResource("RectangleShape2D_3s6sv")

[node name="HitAreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitAreaRight"]
position = Vector2(46, -1)
shape = SubResource("RectangleShape2D_pec1w")

[node name="HitAreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitAreaLeft"]
position = Vector2(-45, -1)
shape = SubResource("RectangleShape2D_2xuaf")

[node name="HitAreaUp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitAreaUp"]
position = Vector2(1, -44)
shape = SubResource("RectangleShape2D_1w58p")

[node name="HitAreaDown" type="Area2D" parent="."]
position = Vector2(1, 47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitAreaDown"]
position = Vector2(-2, -4)
shape = SubResource("RectangleShape2D_1w58p")
